finalizacion de callbacks

--- a/callStack/index.html
+++ b/callStack/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <h1> CallStack</h1>
-
-    <script src="ejemploCallBack.js">
+    <button id="miBoton">Click</button>
+    <script src="ejemplo4CallBack.js">
 
     </script>
 </body>
